--- a/slides.html
+++ b/slides.html
@@ -513,7 +513,7 @@
       <h2>Built-in Classes</h2>
       <p>Ruby comes with many built-in classes that we can use.</p>
       <p><code>String</code>, <code>Integer</code>, <code>File</code>, <code>Hash</code>, <code>Array</code>...</p>
-      <p>You can read about all the built-in objects <a href="http://www.ruby-doc.org/core-2.0/">here</a></p>
+      <p>You can read about all the built-in objects <a href="http://www.ruby-doc.org/core-2.0.0/">here</a></p>
     </section>
 
     <section class="slide">
@@ -894,7 +894,7 @@ end</code></pre>
       <h2>
         Second Solution
       </h2>
-      <p>Notice that the line puts "Tweet your hear out!" is unnecessarily repeated?</p>
+      <p>Notice that the line puts "Tweet your heart out!" is unnecessarily repeated?</p>
       <p>Let's cut it out by replacing the entire if statement with the code below:</p>
       <section>
         <pre><code>if tweet.length > 140<br>  puts "Your tweet is too long!"<br>elsif tweet.length <= 140<br>  puts "Tweet your heart out!"<br>end</code></pre>
@@ -941,7 +941,7 @@ end</code></pre>
         <pre><code>if tweet.length > 140<br>  puts "Your tweet is too long!"<br>else<br>  puts "Tweet your heart out!"<br>end</code></pre>
       </section>
       <p class='large-font'>
-        The else is there are a <b>catch-all</b>. You can think of it like a last resort. 
+        The else is there as a <b>catch-all</b>. You can think of it like a last resort. 
         If none of the other options are true, then just execute the puts statement after the else.
       </p>
     </section>
