--- a/slides.html
+++ b/slides.html
@@ -1046,7 +1046,7 @@ end</code></pre>
             
     <section class="slide">
       <h2>Tell me exactly how many times</h2>
-      <p>Create a new program with the following code, or use run the program in assignments/loop_2.rb:</p>
+      <p>Create a new program with the following code, or run the program in assignments/loop_2.rb:</p>
       <section>
 <pre><code>3.times do
   puts "Hip-Hop-Hooray!"
